---   Complete near-dup pipeline, UI overhaul, 4 hardening features, and FMS design
  This commit represents a large batch of work across the full CloneZapper
  stack — from engine stubs to UI polish to test coverage — and closes the
  current development phase with a forward-looking design document for the
  FileManagementSystem umbrella project.

  ──────────────────────────────────────────────────────────────
  ENGINE — stubs implemented
  ──────────────────────────────────────────────────────────────
  - ContentExtractor: Apache Tika facade, 1 MB cap, silent "" on failure
  - NearDupService: 128 MinHash functions (fixed seed 0xDEADBEEF),
    computeSignature → 1024-byte array, estimateSimilarity → Jaccard
  - DocumentHandler: PDF/DOCX/PPTX/XLSX/HTML dispatch via Tika text
    extraction → bigram shingles → MinHash; public shingle() and canHandle()
  - ImageHandler: dHash (9×8 resize, BT.601 luma, 64 difference bits);
    computeSimilarity via Hamming distance; empty byte[] on unreadable files
  - CompareStage: injected HandlerRegistry; executeNearDup groups files by
    MIME type, skips GenericHandler, emits near-dup pairs in [0.5, 1.0)
    with strategy "near-dup-image" or "near-dup-document"
  - UnifiedScanner: startScan overload with Consumer<String> progress
    callback; phase() helper updates DB and fires callback; archive root
    auto-excluded on every scan via Set.of(archiveRoot)

  ──────────────────────────────────────────────────────────────
  4 HARDENING FEATURES
  ──────────────────────────────────────────────────────────────
  1. Archive exclusion (ScanStage)
     Accepts Set<String> excludePaths; normalises to absolute Path and
     skips any file whose path starts with an excluded root. Prevents
     staged files from being re-indexed as duplicates on the next scan.

  2. hash_full write-back (CompareStage)
     Checks file.getHashFull() before computing; persists via
     fileRepository.updateHashFull() after computing. Avoids re-reading
     l